--- a/main.tex
+++ b/main.tex
@@ -1182,7 +1182,7 @@ Notice that we have the following equalities:
 		i \text{ is odd}}} \theta'\left(\zeta_n^{q^{i+n} y_{i+1} + q^{2n-i} y_{n+i}}\right).
 	\end{align*}
 \end{enumerate}
-The results now follow from these equalities and the norm computations, since we can easily find a permutation matrix in $\GL_{2n}$ that conjugates the character that corresponds to $\phi\left(x_{T,\bullet}\right)$ to the desired character from the proposition. This permutation matrix simply corresponds to the permutation that permutes the $y_i$'s so that the coefficient of $y_{i+1}$ in the exponent of the right hand side of the corresponding equation matches the one of the desired character. For example, in the norm one cases it is the permutation matrix that permutes the $y_i$'s so that the coefficient of $y_{i+1}$ is $q^{i}$ for every $0 \le i \le n-1$.
+The results now follow from these equalities and the norm computations, since we can easily find a permutation matrix in $\GL_{2n}$ that conjugates the character that corresponds to $\phi\left(x_{T,\bullet}\right)$ to the desired character from the lemma. This permutation matrix simply corresponds to the permutation that permutes the $y_i$'s so that the coefficient of $y_{i+1}$ in the exponent of the right hand side of the corresponding equation matches the one of the desired character. For example, in the norm one cases it is the permutation matrix that permutes the $y_i$'s so that the coefficient of $y_{i+1}$ is $q^{i}$ for every $0 \le i \le n-1$.
 %Now the results follow from checking that
 %\[
 %    (\theta_1 \times \theta_1^{-1}) \circ \FieldNorm{\algebraicGroup{T}_1(\finiteField_r)}{\algebraicGroup{T}_1(\finiteField)} (\vec{y})(\zeta_r) = \theta_2\circ \FieldNorm{\algebraicGroup{T}_2(\finiteField_r)}{\algebraicGroup{T}_2(\finiteField)}(\vec{y})(\zeta_r)
