(back to default color scheme)
I edit a lot of times in black background, write text

--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \usepackage{comment}
 \usepackage{xypic}
 \usepackage{mathtools}
-\usepackage{xcolor}
+%\usepackage{xcolor}
 
 % new environment
 \newtheorem{theorem}{Theorem}[section]
@@ -204,8 +204,8 @@
 % 20C33    Representations of finite groups of Lie type
 
 \begin{document}
-\pagecolor{black}
-\color{white}
+%\pagecolor{black}
+%\color{white}
 
 \begin{abstract}
 \end{abstract}
