--- a/main.tex
+++ b/main.tex
@@ -1030,7 +1030,7 @@ This result will be proved in \Cref{subsec:stability}. Our next goal is to prove
 \label{lem:indep_geo_conj}
     If $(\algebraicGroup{T}_H,\theta_H)$ and $(\algebraicGroup{T}'_H, \theta_H)$ are geometrically conjugate, then $$\frac{\dblVirtualJacobiSumScalar{\RTTheta{T_H}{\theta_H}}{\chi}}{\RTTheta{T_H}{\theta}(1)} = \frac{\dblVirtualJacobiSumScalar{\RTTheta{T'_H}{\theta'}}{\chi}}{\RTTheta{T'_H}{\theta'_H}\left(1\right)}.$$
 \end{lemma}
-Although will we only use resitrictions of scalars from $\quadraticExtension$,
+Although will we only use restriction of scalars from $\quadraticExtension$,
 we recall in general that $$
 	\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N} = \prod_{a \in \mathbb{Z}/m\mathbb{Z}} \left(\algebraicGroup{\GL}_N\right)_a,
 $$
@@ -1046,9 +1046,9 @@ Torus character pairs for $\restrictionOfScalars{\finiteFieldExtension{m}}{\fini
 %    \algebraicGroup{T}}}\sum_{t\in \tilde{\algebraicGroup{T}}^{\Frobenius}} \theta^{-1}(t)\psi(\trace(t)).
 %\]
 %\calvin{maybe should do inverses in the definition. Not sure if $\tau$ or $g$ make more sense.}
-Given a torus character pair $(\algebraicGroup{T},\theta)$ with associated $\Frobenius$-twisted conjugacy class $(w) \in W(\algebraicGroup{T}_0)$ along with an embedding $\rho:\algebraicGroup{G}^* \to \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ and a Frobenius stable maximal torus $\algebraicGroup{T}_{0,\rho} \subset \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ such that $\rho(\algebraicGroup{T}_0^*) \subset \algebraicGroup{T}_{0,\rho}^*$, let $\tilde{\algebraicGroup{T}}$ be the torus of $\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$? corresponding to the $\Frobenius$-twisted conjugacy class of $\rho(w) \in W(\algebraicGroup{T}_{0,\rho})$ \elad{of $W\left(\algebraicGroup{T}^{\ast}\right)$? Or maybe $W\left(\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{A}_N}\right)$?}\calvin{I guess I want the dual of $T^*$ technically speaking. I switched the notation to give the GLn a standard torus T0 too so now hopefully it makes sense.} and let $\tilde{\theta} \colon \tilde{\algebraicGroup{T}}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ be a character such that $(\rho(s_{\algebraicGroup{T},\theta})) = (s_{\tilde{\algebraicGroup{T}},\tilde{\theta}})$. We define
+Given a torus character pair $(\algebraicGroup{T},\theta)$ with associated $\Frobenius$-twisted conjugacy class $(w) \in W(\algebraicGroup{T}_0)$ along with an embedding $\rho:\algebraicGroup{G}^* \to \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ and a Frobenius stable maximal torus $\algebraicGroup{T}_{0,\rho} \subset \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ such that $\rho(\algebraicGroup{T}_0^*) \subset \algebraicGroup{T}_{0,\rho}^*$, let $\tilde{\algebraicGroup{T}}$ be the torus of $\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ corresponding to the $\Frobenius$-twisted conjugacy class of $\rho(w) \in W(\algebraicGroup{T}_{0,\rho})$ and let $\tilde{\theta} \colon \tilde{\algebraicGroup{T}}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ be a character such that $(\rho(s_{\algebraicGroup{T},\theta})) = (s_{\tilde{\algebraicGroup{T}},\tilde{\theta}})$. We define
 \[
-    g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi) := \tau_{\Tilde{\algebraicGroup{T}}}(\tilde{\theta} \times \chi \circ \det,\psi) = \epsilon_{\Tilde{\algebraicGroup{T}}} q^{-nm/2}\sum_{t \in \tilde{\algebraicGroup{T}}^{\Frobenius}} \tilde{\theta}^{-1}(t)\chi^{-1}({\det}_{\finiteFieldExtension{m}}t) \psi(\trace_{\finiteFieldExtension{m}}t).
+    g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi) := \tau_{\Tilde{\algebraicGroup{T}}}(\tilde{\theta} \times \chi,\psi) = \epsilon_{\Tilde{\algebraicGroup{T}}} q^{-nm/2}\sum_{t \in \tilde{\algebraicGroup{T}}^{\Frobenius}} \tilde{\theta}^{-1}(t)\chi^{-1}({\det}_{\finiteFieldExtension{m}}t) \psi(\trace_{\finiteFieldExtension{m}}t).
 \]
 Here $\chi \colon \multiplicativegroup{\finiteFieldExtension{m}} \to \multiplicativegroup{\cComplex}$ and $\fieldCharacter \colon \finiteFieldExtension{m} \to \multiplicativegroup{\cComplex}$ are characters. The following lemma shows that this is well defined.
 
